--- a/app/src/main/res/layout/exo_player_control_view.xml
+++ b/app/src/main/res/layout/exo_player_control_view.xml
@@ -3,9 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:elevation="1dp"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent">
 
     <com.google.android.exoplayer2.ui.DefaultTimeBar
         android:id="@+id/exo_progress"
@@ -103,5 +101,4 @@
             android:src="@drawable/ic_fullscreen"
             tools:ignore="ContentDescription" />
     </LinearLayout>
-
 </RelativeLayout>
