--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -32,4 +32,14 @@
         <item>2</item>
         <item>3</item>
     </string-array>
+
+    <string-array name="play_default_quality_entries">
+        <item>@string/max</item>
+        <item>@string/default_</item>
+    </string-array>
+
+    <string-array name="play_default_quality_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
 </resources>
