--- a/app/src/main/res/layout-land/fragment_welcome_ad.xml
+++ b/app/src/main/res/layout-land/fragment_welcome_ad.xml
@@ -14,7 +14,8 @@
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:fitsSystemWindows="true">
 
             <ImageView
                 android:id="@+id/iv"
@@ -36,7 +37,6 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:background="@drawable/bg_text"
-                android:fitsSystemWindows="true"
                 android:padding="5dp"
                 android:textColor="@android:color/white"
                 android:textSize="20sp" />
