--- a/app/src/main/res/layout/exo_player_control_view.xml
+++ b/app/src/main/res/layout/exo_player_control_view.xml
@@ -41,7 +41,7 @@
 
         <ImageButton
             android:id="@+id/ib_next"
-            android:layout_width="50dp"
+            android:layout_width="0dp"
             android:layout_height="50dp"
             android:background="@null"
             android:foreground="?selectableItemBackground"
@@ -54,7 +54,7 @@
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="弹幕"
+            android:text="@string/danmaku"
             android:textColor="@android:color/white" />
 
         <TextView
