--- a/app/src/main/res/layout/layout_relate_video_card_item.xml
+++ b/app/src/main/res/layout/layout_relate_video_card_item.xml
@@ -35,26 +35,41 @@
                 android:id="@+id/tv_up"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@id/tv_play"
+                android:layout_above="@id/ll"
                 android:layout_marginStart="5dp"
                 android:layout_toEndOf="@id/iv_cover" />
 
-            <TextView
-                android:id="@+id/tv_play"
+            <LinearLayout
+                android:id="@+id/ll"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@id/iv_cover"
                 android:layout_marginStart="5dp"
-                android:layout_toEndOf="@id/iv_cover" />
+                android:layout_toEndOf="@id/iv_cover"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tv_danmaku"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/iv_cover"
-                android:layout_marginStart="5dp"
-                android:layout_toEndOf="@id/tv_play" />
+                <TextView
+                    android:id="@+id/tv_play"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/play" />
+
+                <TextView
+                    android:id="@+id/tv_danmaku"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/danmaku" />
+            </LinearLayout>
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
