--- a/app/src/main/res/layout/dialog_video_download_info.xml
+++ b/app/src/main/res/layout/dialog_video_download_info.xml
@@ -150,7 +150,8 @@
             <TextView
                 android:id="@+id/tv_danmaku_url"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textIsSelectable="true" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -173,7 +174,8 @@
             <TextView
                 android:id="@+id/tv_audio_url"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textIsSelectable="true" />
         </LinearLayout>
     </ScrollView>
 </layout>
