--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,5 +8,6 @@
     <dimen name="face_size">60dp</dimen>
     <dimen name="face_size_small">45dp</dimen>
     <dimen name="level_size">28dp</dimen>
+    <dimen name="level_size_small">18dp</dimen>
     <dimen name="divider_height">1dp</dimen>
 </resources>
