--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -42,4 +42,34 @@
         <item>0</item>
         <item>1</item>
     </string-array>
+
+    <string-array name="block_by_place_entries">
+        <item>@string/r2l</item>
+        <item>@string/l2r</item>
+        <item>@string/top</item>
+        <item>@string/bottom</item>
+        <item>@string/special</item>
+    </string-array>
+
+    <string-array name="block_by_place_values">
+        <item>r2l</item>
+        <item>l2r</item>
+        <item>top</item>
+        <item>bottom</item>
+        <item>special</item>
+    </string-array>
+
+    <string-array name="allow_danmaku_overlapping_entries">
+        <item>@string/r2l</item>
+        <item>@string/l2r</item>
+        <item>@string/top</item>
+        <item>@string/bottom</item>
+    </string-array>
+
+    <string-array name="allow_danmaku_overlapping_values">
+        <item>r2l</item>
+        <item>l2r</item>
+        <item>top</item>
+        <item>bottom</item>
+    </string-array>
 </resources>
