--- a/app/src/main/res/menu/play_activity.xml
+++ b/app/src/main/res/menu/play_activity.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/open_in_browser"
-        android:icon="@drawable/ic_launch"
-        android:title="@string/open_in_browser"
-        app:showAsAction="always"
-        tools:ignore="AlwaysShowAction" />
+        android:id="@+id/share"
+        android:icon="@drawable/ic_share_white"
+        android:iconTint="@android:color/white"
+        android:title="@string/share"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/pip"
-        android:title="@string/pip" />
+        android:icon="@drawable/ic_pip"
+        android:iconTint="@android:color/white"
+        android:title="@string/pip"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/open_in_browser"
+        android:icon="@drawable/ic_launch_white"
+        android:title="@string/open_in_browser"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/check_cover"
