--- a/app/src/main/res/menu/user_space_activity.xml
+++ b/app/src/main/res/menu/user_space_activity.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/open_in_browser"
-        android:icon="@drawable/ic_launch"
+        android:icon="@drawable/ic_launch_black"
         android:title="@string/open_in_browser"
         app:showAsAction="ifRoom" />
 </menu>
