--- a/app/src/main/res/layout/fragment_remote_play_control.xml
+++ b/app/src/main/res/layout/fragment_remote_play_control.xml
@@ -9,6 +9,14 @@
         android:orientation="vertical"
         android:padding="5dp">
 
+        <TextView
+            android:id="@+id/tv_display_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:textColor="@android:color/white"
+            android:textSize="24sp" />
+
         <SeekBar
             android:id="@+id/sb_progress"
             android:layout_width="match_parent"
