--- a/app/src/main/res/layout/item_reply.xml
+++ b/app/src/main/res/layout/item_reply.xml
@@ -49,6 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_date"
                 android:layout_alignStart="@id/tv_date"
+                android:textColor="@color/ordinaryText"
                 android:textIsSelectable="true" />
 
             <TextView
@@ -57,6 +58,35 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 tools:ignore="RelativeOverlap" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_content"
+                android:layout_alignStart="@id/tv_content"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_like"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/like" />
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/btn_action"
+                style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
+                android:layout_width="50dp"
+                android:layout_height="40dp"
+                android:layout_below="@id/tv_content"
+                android:layout_alignParentEnd="true"
+                android:text="@string/action"
+                android:textColor="@color/ordinaryText" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 </layout>
