--- a/app/src/main/res/layout/activity_tool.xml
+++ b/app/src/main/res/layout/activity_tool.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -64,6 +63,50 @@
                 android:layout_weight="1"
                 android:text="bv2av"
                 android:textColor="@android:color/black" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:autoLink="web"
+            android:text="详见 https://github.com/SocialSisterYi/bilibili-API-collect/blob/master/comment/comment_list.md#%E7%82%B9%E8%AF%84%E8%AF%84%E8%AE%BA%E5%8C%BA%E6%98%8E%E7%BB%86"
+            android:textIsSelectable="true" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/et_type"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="type"
+                android:inputType="number"
+                android:maxLines="1"
+                tools:ignore="HardcodedText" />
+
+            <EditText
+                android:id="@+id/et_oid"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="oid"
+                android:inputType="number"
+                android:maxLines="1"
+                tools:ignore="HardcodedText" />
+
+            <Button
+                android:id="@+id/btn_reply_go"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="GO"
+                android:textColor="@color/ordinaryText"
+                tools:ignore="HardcodedText" />
         </LinearLayout>
     </LinearLayout>
 </layout>
