--- a/app/src/main/res/layout/item_reply.xml
+++ b/app/src/main/res/layout/item_reply.xml
@@ -60,6 +60,7 @@
                 tools:ignore="RelativeOverlap" />
 
             <LinearLayout
+                android:id="@+id/ll_like"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_content"
@@ -77,6 +78,15 @@
                     android:layout_height="wrap_content"
                     android:text="@string/like" />
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_action"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_toEndOf="@id/ll_like" />
 
             <Button
                 android:id="@+id/btn_action"
