--- a/app/src/main/res/layout/item_reply.xml
+++ b/app/src/main/res/layout/item_reply.xml
@@ -107,7 +107,7 @@
                 android:layout_below="@id/tv_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
-                android:layout_toEndOf="@id/ll_like" />
+                android:layout_toEndOf="@id/ll_reply" />
 
             <Button
                 android:id="@+id/btn_action"
