使用MotionLayout实现动画

--- a/app/src/main/res/layout-sw700dp/activity_main.xml
+++ b/app/src/main/res/layout-sw700dp/activity_main.xml
@@ -1,32 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
 
     </data>
 
-    <LinearLayout
+    <androidx.constraintlayout.motion.widget.MotionLayout
+        android:id="@+id/ml"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layoutDescription="@xml/activity_main_scene">
 
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/nav_main"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:background="@color/background"
             android:theme="@style/AppTheme.Navigation"
             app:headerLayout="@layout/drawer_main_header"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/view"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:menu="@menu/main" />
 
         <View
+            android:id="@+id/view"
             android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="@color/colorPrimaryDark" />
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryDark"
+            app:layout_constraintEnd_toStartOf="@+id/fl_main"
+            app:layout_constraintStart_toEndOf="@+id/nav_main"
+            app:layout_constraintTop_toTopOf="@+id/nav_main" />
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
             android:id="@+id/fl_main"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/view"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
