--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -16,30 +17,41 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <LinearLayout
+            <androidx.constraintlayout.motion.widget.MotionLayout
+                android:id="@+id/ml"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
+                app:layoutDescription="@xml/activity_play_scene"
                 tools:context=".ui.play.PlayActivity">
 
                 <com.duzhaokun123.bilibilihd.ui.widget.BiliPlayerViewPackageView
                     android:id="@+id/bpvpv"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="300dp"
-                    android:background="@android:color/black" />
+                    android:background="@android:color/black"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <com.google.android.material.tabs.TabLayout
                     android:id="@+id/tl"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:elevation="1dp"
-                    android:theme="@style/AppTheme.Navigation" />
+                    android:theme="@style/AppTheme.Navigation"
+                    app:layout_constraintBottom_toTopOf="@+id/vp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/bpvpv" />
 
                 <androidx.viewpager.widget.ViewPager
                     android:id="@+id/vp"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-            </LinearLayout>
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/tl"
+                    app:layout_constraintTop_toBottomOf="@+id/tl" />
+            </androidx.constraintlayout.motion.widget.MotionLayout>
 
             <FrameLayout
                 android:id="@+id/fl_end"
