--- a/app/src/main/res/layout/activity_photo_view.xml
+++ b/app/src/main/res/layout/activity_photo_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <data>
 
     </data>
@@ -14,7 +15,8 @@
         <com.github.chrisbanes.photoview.PhotoView
             android:id="@+id/pv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:transitionName="img" />
 
         <RelativeLayout
             android:id="@+id/rl"
