--- a/app/src/main/res/layout/layout_bili_player_view_package_view.xml
+++ b/app/src/main/res/layout/layout_bili_player_view_package_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data />
 
@@ -8,7 +8,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <com.duzhaokun123.bilibilihd.ui.widget.BiliPlayerView
+
+        <com.duzhaokun123.bilibilihd.ui.widget.BiliPlayerView
             android:id="@+id/bpv"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
@@ -17,7 +18,9 @@
             android:id="@+id/iv_cover"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
+            android:background="@android:color/black"
+            android:scaleType="fitCenter"
+            android:visibility="gone"
             tools:ignore="ContentDescription" />
     </RelativeLayout>
 
